--- a/wordpress/wp-content/themes/lebourdonnement/css/one-page-wonder.css
+++ b/wordpress/wp-content/themes/lebourdonnement/css/one-page-wonder.css
@@ -47,6 +47,10 @@ h2 > a:hover {
 }
 
 /* HOME */
+#home article {
+    padding: 20px 0;
+}
+
 #home article img {
     max-width: none;
     opacity: 0.8;
